--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -1,6 +1,6 @@
 {% extends 'courses/base.html' %}
 {% load static %}
-{% load my_filters %}
+{% load filters %}
 {% block title %}{{ course.title }}{% endblock %}
 {% block content %}
 
