--- a/courses/templates/courses/home.html
+++ b/courses/templates/courses/home.html
@@ -39,17 +39,17 @@
       <div class="levels-container">
 
           <div class="level-card">
-              <h3>الأول إعدادي</h3>
+              <h3>الأولى إعدادي</h3>
               <a href="{% url 'course_level' 1 %}" class="level-btn">ابدأ الآن</a>
           </div>
 
           <div class="level-card">
-              <h3>الثاني إعدادي</h3>
+              <h3>الثانية إعدادي</h3>
               <a href="{% url 'course_level' 2 %}" class="level-btn">ابدأ الآن</a>
           </div>
 
           <div class="level-card">
-              <h3>الثالث إعدادي</h3>
+              <h3>الثالثة إعدادي</h3>
               <a href="{% url 'course_level' 3 %}" class="level-btn">ابدأ الآن</a>
           </div>
 
