--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -3,7 +3,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8" />
-    <title>{% block title %} المنير لإكتساب اللغة و التعبير{% endblock %}</title>
+    <title>{% block title %} المنير لاكتساب اللغة و التعبير{% endblock %}</title>
 
     <!-- Bootstrap RTL -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
