--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -28,7 +28,7 @@
 <nav class="navbar navbar-expand-lg" style="background:#b22222; padding:14px;">
     <div class="container">
         <a class="navbar-brand text-white fw-bold" href="{% url 'home' %}">
-            المنير لإكتساب اللغة و التعبير
+            المنير لاكتساب اللغة و التعبير
         </a>
 
         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navItems">
