--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -27,11 +27,11 @@
 <div class="course-section">
     <h4>🎥 الفيديو :</h4>
 
-    <iframe width="100%" height="450"
-            src="{{ course.video_url|youtube_embed }}"
-            frameborder="0"
-            allowfullscreen>
-    </iframe>
+   <iframe width="100%" height="450"
+        src="{{ course.video_url }}"
+        frameborder="0"
+        allowfullscreen>
+</iframe>
 </div>
 {% endif %}
 
